css/main.css
/* ... */
figure.effect-goliath:hover img {
  -webkit-transform: translate3d(0, -80px, 0);
  transform: translate3d(0, -80px, 0);
}
figure.effect-goliath:hover h3 {
  -webkit-transform: translate3d(0, -100px, 0);
  transform: translate3d(0, -100px, 0);
}
figure.effect-goliath:hover p {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.card img {
  width: 100%;
}
.card-block {
  text-align: center;
}
.card-text {
  font-weight: 100;
}

